making the main method of the bean generator take command line args to configure its operation